<resources>
    <string name="app_name">Contacts</string>
    <string name="app_edit_contact">Edit contact</string>

    <string name="lbl_name">Name</string>
    <string name="lbl_birth">Birth (dd/mm/yyyy)</string>
    <string name="lbl_website">Website</string>
    <string name="lbl_telephone">Telephone</string>
    <string name="lbl_email">example@example.com</string>
    <string name="lbl_contact_name_on_dialog">Contact name</string>
    <string name="lbl_call">Call</string>
    <string name="lbl_ddd">DDD</string>
    <string name="lbl_example">example.com</string>
    <string name="lbl_email_contact_list">Email :</string>
    <string name="lbl_name_contact_list">Name : </string>
    <string name="lbl_telephone_contact_list">Telephone :</string>
    <string name="lbl_website_contact_list">Website :</string>
    <string name="lbl_today">Today</string>
    <string name="lbl_yesterday">Yesterday</string>
    <string name="lbl_find_contacs">Find contacts</string>
    <string name="lbl_add_favorites">Add to favorites</string>
    <string name="lbl_remove_from_favorites">Remove from favorites</string>
    <string name="lbl_take_photo">Take photo</string>
    <string name="lbl_contact_photo">"Contact photo"</string>

    <string name="bar_new_contact">New Contact</string>
    <string name="item_accept">Accept Item</string>
    <string name="item_deny">Deny Item</string>
    <string name="item_add_contact">Add Contact</string>

    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_website">Go to website</string>
    <string name="menu_item_search">Search</string>

    <string name="msg_connection_failed">Connection failed or website does not exist</string>

    <string name="dialog_delete">Are you sure you want to delete this item?</string>
    <string name="dialog_no">No</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_saving_database">Saving on database</string>
    <string name="dialog_wait">Wait</string>
    <string name="dialog_load">Loading contact list</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_open">Open</string>
    <string name="navigation_birthdays">Birthdays</string>

    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>
    <string name="menu_editable_item">editableItem</string>
    <string name="lbl_editable_item">Editable item2</string>
    <string name="menu_take_photo">Take photo</string>
    <string name="title_activity_main_view">MainView</string>

    <string name="action_settings">Settings</string>
    <string name="lbl_no_web_registered">No Website registered</string>
    <string name="lbl_no_telephone_registered">No telephone registered</string>
    <string name="lbl_no_birth_registered">No birth registered</string>


</resources>
