<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="10dp"
        card_view:cardCornerRadius="12dp"
        card_view:cardElevation="2dp"
        card_view:contentPadding="10dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/relativeLayout">

            <ImageView
                android:id="@+id/imageViewContactItemList"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@mipmap/ic_default_contact"
                android:layout_below="@+id/textViewName"/>


            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_name"
                android:textSize="22dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_email"
                android:textSize="15dp"
                android:layout_above="@+id/textViewTelephone"
                android:layout_toRightOf="@+id/ratingBarItemList"
                android:layout_toEndOf="@+id/ratingBarItemList" />

            <TextView
                android:id="@+id/textViewTelephone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_telephone"
                android:textSize="15dp"
                android:layout_centerVertical="true"
                android:layout_alignLeft="@+id/textViewEmail"
                android:layout_alignStart="@+id/textViewEmail" />


            <RatingBar
                android:id="@+id/ratingBarItemList"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:layout_below="@+id/imageViewContactItemList"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />



        </RelativeLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>